assets/less/seriously.less
/* ... */
    .product {
        .clearfix();
        margin: 0 auto;
        position: relative;
        overflow: hidden;
        text-align: center;

        .description {
            max-width: 90%;
            margin-left:auto;
            margin-right:auto;
            .text.compact {
                width:100%;
                max-height: 5.5em;
                overflow: hidden;
            }
            .price {
                font-weight: 700;
            }
        }


        h1 {
             display: inline-block;
             clear: both;
             line-height: 1.3em;
             a {
                font-weight: 700;
             }
        }


        .description,.details_container,.left_info {
            > div,>nav,form,form > div,input {
                margin-bottom: 0.8em;
            }
            .shipping {
                font-style: italic;
                color:#333;
            }
        }


        .left_info {
            
            width:70%;
            margin-left: auto;
            margin-right: auto;
        }

        .details_container {
            max-width: none;
            width: 100%;
            position: relative;
        }


        .image_container {
            display: block;
            margin-bottom: 1em;
            img {
                max-width: 100%;
                height: auto;
                max-height: 600px;
            }
        }

    }



    /* ******************************

    Products Listing

    ****************************** */




    #products {
        width:100%;
        padding: @base-spacing;
        padding-top: @base-spacing*4;
        .left_info {
            .description {
                display: none;
            }
        }

        .product {
            cursor: pointer;
            padding: 0 0 7%;
            max-width:@maxwidth;
            margin: 0 auto;
            width: 100%;
            .description {
                margin-right: auto;


                a.price {
                    font-weight: 400;
                    font-style: italic;
                }
            }


            h1 {
                text-align: center;
                line-height: 1.3em;
            }

            .text {
                width:80%;
                margin-right: auto;
                margin-left: auto;
                margin-bottom: 0.5em;
            }


            .left_info {
                .opacity(0.6);
                .transition(~"opacity 0.3s @{ease}");
                // .transition-delay(50ms);
            }
            .image_container {
                padding: @base-spacing/2;
            }
            .details_container {
                .opacity(0.4);
                .transition(~"opacity 0.3s @{ease}");
                // .transition-delay(50ms);
            }
            
            &:hover {

                h1 a {
                    border-bottom: 2px solid black;
                }

                .left_info {
                    .opacity(1);
                    // right:0;
                }

                .details_container {
                    .opacity(1);
                    // left:0;
                }

                figure img {
                    .box-shadow(2px 2px 6px rgba(0,0,0,.4));
                }
            };
        }


        // section shown in related product context
        &.related {
            .box-shadow(0px 5px 8px rgba(0,0,0,.05) inset);
            width:100%;
            margin:@base-spacing*5 auto 0 auto;
            background: #EEE;
            padding:@base-spacing 15%;
            margin-top: @base-spacing*5;
            position: relative;
            z-index: 92;

            .rel-divider {
                width: 100%;
                margin-left:auto;
                margin-right:auto;
                // display: block;
                .opacity(0.4);
                
                // text-transform: uppercase;
                text-align: center;
                
            }

            .product {
                .text {
                    display: none;
                }
            }

            visibility: hidden;
            .loaded & {
                visibility: visible;
            }

        }
    }
/* ... */

